# SkanUJkod

./: .envrc  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  TODO.md  build_plugins.sh  case_sensitivity_test.dot  cfg_comparison_test.rs  main.go  my-custom-config.toml  output.dot  test_all_functionality.sh  text.txt
.github/workflows/: lint-branches.yml  lint-commits.yml  rust.yml
branch_cov/: Cargo.toml  README.md
branch_cov/src/: core.rs  helpers.rs  instrumentation.rs  lib.rs
branch_cov/tests/: branch_cov_tests.rs
cfg/: Cargo.toml  README.md
cfg-lib/: Cargo.toml
cfg-lib/src/: lib.rs
cfg-lib/src/ast/: parser.rs
cfg-lib/src/cfg/: builder.rs  optimization.rs  types.rs
cfg-lib/tests/: cfg_tests.rs
cfg/src/: lib.rs
cfg/src/ast/: mod.rs  parser.rs
cfg/src/cfg/: builder.rs  mod.rs  optimization.rs  validation.rs
cfg/src/export/: dot.rs
cfg/tests/: cfg_tests.rs
crates/go-parser/: Cargo.toml
crates/go-parser/src/: ast.rs  errors.rs  lib.rs  objects.rs  parser.rs  position.rs  scanner.rs  scope.rs  token.rs  visitor.rs
crates/go-parser/tests/: parser_test.rs
crates/go-types/: Cargo.toml
crates/go-types/src/: operand.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: main.rs
crates/plugin_interface/: Cargo.toml
crates/plugin_interface/src/: lib.rs
crates/plugins/branch_cov_plugin/: Cargo.toml
crates/plugins/branch_cov_plugin/src/: core.rs  helpers.rs  instrumentation.rs  lib.rs
crates/plugins/branch_cov_plugin/tests/: branch_cov_tests.rs
crates/plugins/cfg/iface/: Cargo.toml
crates/plugins/cfg/libimpl/: Cargo.toml
crates/plugins/cfg/libimpl/src/: builders.rs  lib.rs  optimization.rs  types.rs  validation.rs
crates/plugins/cfg/libimpl/src/export/: dot.rs
crates/plugins/cfg_plugin/: Cargo.toml
crates/plugins/cfg_plugin/src/: lib.rs
crates/plugins/cfg_plugin/src/ast/: parser.rs
crates/plugins/cfg_plugin/src/cfg/: builder.rs  builder_clean.rs  builder_full.rs  chain_builder.rs  file_builder.rs  loop_handlers.rs  mod.rs  statement_handlers.rs  utils.rs
crates/plugins/cfg_plugin/src/export/: dot.rs  mod.rs
crates/plugins/cfg_plugin/tests/: cfg_tests.rs
crates/plugins/count_funcs/iface/: Cargo.toml
crates/plugins/count_funcs/iface/src/: lib.rs
crates/plugins/count_funcs/libimpl/: Cargo.toml
crates/plugins/cyclomatic_complexity_plugin/: Cargo.toml
crates/plugins/cyclomatic_complexity_plugin/src/: analyzer.rs  helpers.rs  lib.rs
crates/plugins/cyclomatic_complexity_plugin/tests/: cyclomatic_complexity_tests.rs
crates/plugins/git_metrics/: Cargo.toml
crates/plugins/git_metrics/iface/: Cargo.toml
crates/plugins/git_metrics/iface/src/: lib.rs
crates/plugins/git_metrics/libimpl/: Cargo.toml
crates/plugins/git_metrics/libimpl/src/: lib.rs
crates/plugins/git_metrics/libimpl/src/core/: runner.rs
crates/plugins/git_metrics/libimpl/src/types/: result_type.rs
crates/plugins/git_metrics/libimpl/tests/: test.rs
crates/plugins/git_metrics/libimpl/tests/data/: setup_mock_repo.sh
crates/plugins/git_metrics/src/: lib.rs
crates/plugins/git_metrics/tests/: test.rs
crates/plugins/parse_dir/iface/: Cargo.toml
crates/plugins/parse_dir/iface/src/: lib.rs
crates/plugins/parse_dir/libimpl/: Cargo.toml
crates/plugins/parse_file/iface/: Cargo.toml
crates/plugins/plugin1/: Cargo.toml
crates/plugins/plugin1/src/: lib.rs
crates/plugins/plugin2/: Cargo.toml
crates/plugins/plugin2/src/: lib.rs
crates/plugins/statement_cov_plugin/: Cargo.toml
crates/plugins/statement_cov_plugin/src/: core.rs  helpers.rs  instrumentation.rs  lib.rs
crates/plugins/statement_cov_plugin/tests/: statement_cov_tests.rs
crates/static-checks/: Cargo.toml
crates/static-checks/tests/: tests.rs
cyclomatic_complexity/: Cargo.toml  README.md
cyclomatic_complexity/src/: analyzer.rs  helpers.rs  lib.rs  mod.rs
cyclomatic_complexity/tests/: cyclomatic_complexity_tests.rs
doc/architecture/decisions/: choose-rust.md  model.md  plugin-architecture.md
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  HANDOVER.md  PLUGIN_DEVELOPMENT.md  analyzeDuplicates.md  install_pmd.md
example-go/: go.mod  main.go  main_test.go
go-code/example-go2/: go.mod  main.go  main_test.go
go-code/example-go3/: main.go
go-files/: main.go  main2.go
parser_lib/: Cargo.toml
parser_lib/src/: ast_node.rs  lib.rs  parser_manager.rs
parser_lib/src/language_parsers/: go_parser.rs  mod.rs
parser_lib/tests/: parser_tests.rs
reports/: cfg_gallery.html  report.html
resources/: gitinspector-report.md  learning-rust.md  sonarqube-raport.md  sonarqube-research.md
resources/reposrts/reserch/: main.md
resources/reserch/: main.md
resources/reserch/Checkstyle-Report/: config.xml  main.md
resources/tool-reports/: frama-c.md  gitinspector-report.md  pmd-report.md  template.md
resources/tool-reports/checkstyle/: basic-usage.md  checkstyle-report.md  coolChecks.md  main.md
src/: ast.rs  ast_node.rs  cfg.rs  cfg_tests.rs  cli.rs  config.rs  dot.rs  lib.rs  main.go  main.rs  parser.rs  plugin_manager.rs  repo.rs  reports.rs  runner.rs  static_analysis.rs  stmt_cov.rs  ui.rs
src/cfg/: basic_block.rs  builder.rs  core.rs  graph.rs  mod.rs  optimization.rs  stmt_handlers.rs  validation.rs
src/commands/: all.rs  branch_coverage.rs  cfg.rs  cyclomatic_complexity.rs  list.rs  mod.rs  statement_coverage.rs
src/git_metrics/: mod.rs
src/git_metrics/core/: mod.rs  repo.rs  runner.rs
src/git_metrics/metrics/: commits.rs  mod.rs  ownership.rs
src/git_metrics/types/: metrics_trait.rs  mod.rs  result_type.rs
src/git_metrics/utils/: parsing.rs  printer.rs
src/metrics/: commits.rs  metrics_trait.rs  mod.rs  ownership.rs  result_type.rs  utils.rs
src/pmd/: mod.rs  pmd_runner.rs
statement_cov/: Cargo.toml  README.md
statement_cov/src/: core.rs  helpers.rs  instrumentation.rs  lib.rs
statement_cov/tests/: statement_cov_tests.rs
test_go_project/: simple.go
tests/: ast_node_tests.rs  name_tests.rs  parser_tests.rs  tests.rs
tests/assets/: main.go  test_file.go
tool-reports/: sonarqube.md
(+15 files in other folders)
