[package]
name = "skan-uj-kod"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ 
    "crates/go-parser",
    "crates/go-types", 
    "crates/kernel", 
    "crates/plugin_interface", 
    "crates/plugins/plugin1",
    "crates/plugins/plugin2",
    "crates/plugins/git_metrics"
]

[dependencies.abi_stable]
# git = "https://github.com/kidq330/abi_stable.git"
# branch = "waive_executable_identity"
git = "https://github.com/rodrimati1992/abi_stable_crates.git"


[dependencies.plugin_interface]
path = "crates/plugin_interface"

[dependencies.git_metrics]
path = "crates/plugins/git_metrics"

[[bin]]
name = "opaque_example"
path = "crates/kernel/src/main.rs"
