[package]
name = "skan-uj-kod"
version = "0.1.0"
edition = "2024"

[workspace]
members = [ 
    "crates/go-parser",
    "crates/go-types", 
    "crates/kernel", 
    "crates/plugin_interface", 
    # "crates/plugins/parse_file/iface",
    # "crates/plugins/parse_file/libimpl",
    "crates/plugins/parse_dir/iface",
    "crates/plugins/parse_dir/libimpl",
    "crates/plugins/count_funcs/iface",
    "crates/plugins/count_funcs/libimpl",
    "crates/plugins/cfg/iface",
    "crates/plugins/cfg/libimpl",
    "crates/plugins/git_metrics/iface",
    "crates/plugins/git_metrics/libimpl"
]
exclude = [
    "crates/plugins/parse_file/iface",
    "crates/plugins/parse_file/libimpl",

]

[dependencies.abi_stable]
# git = "https://github.com/kidq330/abi_stable.git"
# branch = "waive_executable_identity"
git = "https://github.com/rodrimati1992/abi_stable_crates.git"


[dependencies.plugin_interface]
path = "crates/plugin_interface"

[[bin]]
name = "opaque_example"
path = "crates/kernel/src/main.rs"
