[package]
name = "cfg_plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "cfg_plugin"
crate-type = ["lib", "cdylib"]

[dependencies.abi_stable]
git = "https://github.com/rodrimati1992/abi_stable_crates.git"

[dependencies.plugin_interface]
path = "../../plugin_interface"
features = ["impls"]

[dependencies.go-parser]
path = "../../go-parser"

[dependencies]
walkdir = "2"
tempfile = "3"
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
