[package]
name = "plugin1"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2024"

[lib]
name = "plugin1"
crate-type = ["lib", "cdylib"]

[dependencies.abi_stable]
git = "https://github.com/kidq330/abi_stable.git"
branch = "waive_executable_identity"

[dependencies.plugin_interface]
path = "../../plugin_interface"
features = ["impls"]

