[package]
name = "statement_cov_plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "statement_cov_plugin"
crate-type = ["lib", "cdylib"]

[dependencies.abi_stable]
git = "https://github.com/rodrimati1992/abi_stable_crates.git"

[dependencies.plugin_interface]
path = "../../plugin_interface"
features = ["impls"]

[dependencies.go-parser]
path = "../../go-parser"

[dependencies]
tempfile = "3.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
coverage = []
