[package]
name = "cfg_lib"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2024"

[lib]
name = "cfg_lib"
crate-type = ["lib"]

[dependencies.abi_stable]
# git = "https://github.com/kidq330/abi_stable.git"
# branch = "waive_executable_identity"
git = "https://github.com/rodrimati1992/abi_stable_crates.git"

[dependencies.plugin_interface]
path = "../../../plugin_interface"
features = ["impls"]

[dependencies.go-parser]
path = "../../../go-parser"

[dependencies.parse_dir_lib]
path = "../../parse_dir/libimpl"