[package]
name = "count_funcs_plugin"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2024"

[lib]
name = "count_funcs_plugin"
crate-type = ["cdylib"]

[dependencies.abi_stable]
# git = "https://github.com/kidq330/abi_stable.git"
# branch = "waive_executable_identity"
git = "https://github.com/rodrimati1992/abi_stable_crates.git"

[dependencies.plugin_interface]
path = "../../../plugin_interface"
features = ["impls"]

[dependencies.parse_file_lib]
path = "../../parse_file/libimpl"

[dependencies.count_funcs_lib]
path = "../libimpl"