[package]
name = "git_metrics_plugin"
version = "0.1.0"
edition = "2024"

[lib]
name = "git_metrics_plugin"
crate-type=["cdylib"]

[dependencies.abi_stable]
# git = "https://github.com/kidq330/abi_stable.git"
# branch = "waive_executable_identity"
git = "https://github.com/rodrimati1992/abi_stable_crates.git"


[dependencies.plugin_interface]
path = "../../../plugin_interface"
features = ["impls"]

[dependencies.git_metrics_lib]
path = "../libimpl"