[package]
name = "git_metrics_lib"
version = "0.1.0"
authors = ["rodrimati1992 <rodrimatt1985@gmail.com>"]
edition = "2024"

[lib]
name = "git_metrics_lib"
crate-type = ["lib"]

[dependencies.abi_stable]
# git = "https://github.com/kidq330/abi_stable.git"
# branch = "waive_executable_identity"
git = "https://github.com/rodrimati1992/abi_stable_crates.git"


[dependencies.plugin_interface]
path = "../../../plugin_interface"
features = ["impls"]

[dependencies]
gix = "0.71.0"
chrono="0.4.40"
imara-diff = "0.1.8"
